fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,10 @@ html {
   line-height: 1.4;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #111;
   margin: 0;
@@ -296,6 +300,7 @@ footer {
   bottom: 1.5rem;
   margin: 0 auto;
   text-align: center;
+  display: block;
   width: 100%;
 }
 
@@ -315,5 +320,10 @@ footer {
   .hero {
     font-size: 2rem;
     letter-spacing: initial;
+  }
+  footer {
+    margin: 1.5rem;
+
+    width: calc(100% - 3rem);
   }
 }
